--- a/vizsga/style.css
+++ b/vizsga/style.css
@@ -4,7 +4,7 @@
 
 body{
 
-    background-image: linear-gradient(0deg, rgb(71, 71, 71) 23.8%, rgb(221,224,252) 92%);
+    background-image: linear-gradient(0deg, rgb(0, 31, 134) 23.8%, rgb(193, 199, 254) 92%);
     height: 100vh;
     display: flex;
     justify-content: center;
